# linux-agent-security-framework

./: .gitignore  Cargo.toml  README.md  TEST_GUIDE.txt  netmod_redirect.json  network_tcp_flags_modification_guide.txt
apps/demo/: Cargo.toml
apps/demo/src/: main.rs
apps/forward/: Cargo.toml
apps/forward/src/: main.rs
apps/netmod-tc/: Cargo.toml
apps/netmod-tc/src/: main.rs
apps/netmod-xdp/: Cargo.toml
apps/netmod-xdp/src/: main.rs
apps/unified-agent/: Cargo.toml
apps/unified-agent/src/: main.rs
ebpf-common/: Cargo.toml
ebpf-common/src/: action.rs  config.rs  ebpf.rs  event.rs  file.rs  lib.rs  network.rs  process.rs
ebpf-framework/: Cargo.toml
ebpf-framework/src/: error.rs  file.rs  lib.rs  network.rs  process.rs
ebpf-probes/: Cargo.toml
ebpf-probes-rust/: Cargo.toml  build.rs
ebpf-probes-rust/src/: file.rs  main.rs
ebpf-probes/bpf/: Makefile  agent.bpf.c  forward.bpf.c  tc_pkt_mod.bpf.c  unified_agent.bpf.c  vmlinux.h  xdp_pkt_mod.bpf.c
ebpf-probes/src/: error.rs  file.rs  lib.rs  network.rs  process.rs
xtask/src/: main.rs
