[package]
name = "ebpf-common"
version = "0.1.0"
edition = "2021"

[features]
default = ["user"]
user = ["aya", "serde", "serde_json", "zerocopy"]

[dependencies]
aya = { version = "0.12", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
zerocopy = { version = "0.7", optional = true }
