[package]
name = "ebpf-probes-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
ebpf-common = { path = "../ebpf-common", default-features = false }
aya-ebpf = { version = "0.1.1", default-features = false }
aya-log-ebpf = { version = "0.1", default-features = false }

[build-dependencies]
aya-build = { version = ">=0.1" }

[[bin]]
name = "ebpf-probes-rust"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false
